--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,7 +67,7 @@
             android:background="@android:color/white"
             android:text="1"
             android:textSize="20dp"
-            android:inputType="text" />
+            android:inputType="number" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -86,7 +86,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="number"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:text="01"
@@ -109,7 +109,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="number"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:text="00"
@@ -132,7 +132,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="number"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:text="01"
@@ -155,7 +155,7 @@
             android:layout_height="wrap_content"
             android:background="@android:color/white"
             android:gravity="center"
-            android:inputType="text"
+            android:inputType="number"
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:text="00"
